unpackaged/main/default/objects/Address__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>