unpackaged/main/default/objects/Address__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>