unpackaged/main/default/objects/Address__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>