unpackaged/main/default/objects/Address__c/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Zip Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>