unpackaged/main/default/objects/Address__c/fields/Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Cross_Streets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cross Streets</label>
    <length>250</length>
    <type>Text</type>
</CustomField>