unpackaged/main/default/objects/Address__c/fields/Doorman__c.field-meta.xml
<CustomField>
    <fullName>Doorman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doorman</label>
    <type>Checkbox</type>
</CustomField>