unpackaged/main/default/objects/Address__c/fields/Facility_Manager__c.field-meta.xml
<CustomField>
    <fullName>Facility_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Addresses (Facility Manager)</relationshipLabel>
    <relationshipName>Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>