unpackaged/main/default/objects/Address__c/fields/Neighbourhood__c.field-meta.xml
<CustomField>
    <fullName>Neighbourhood__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Neighbourhood</label>
    <length>200</length>
    <type>Text</type>
</CustomField>