unpackaged/main/default/objects/Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Vacation Home</fullName>
            </value>
            <value>
                <fullName>Cottage</fullName>
                <isActive>false</isActive>
                <label>Cottage</label>
            </value>
            <value>
                <fullName>Family Home</fullName>
                <isActive>false</isActive>
                <label>Family Home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>