unpackaged/main/default/objects/Address__c/validationRules/Inactive_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Active__c) || ISNEW()) &amp;&amp;
Active__c = FALSE &amp;&amp;
ISBLANK(Inactive_Reason__c)</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Please fill out an Inactive Reason</errorMessage>
</ValidationRule>